# bot2

./: logger_setup.py  main.py  pyproject.toml  run.py
app/: main.py  redis_client.py
app/templates/: guide.html
config_data/: config.py
db/: db_models.py
handlers/: admin.py  instructions.py  start.py  subsmenu.py
keyboards/: builder.py  deps.py  markup.py
marz/: backend.py
misc/: utils.py
repositories/: base.py
