[project]
name = "new-bot-copy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar",
    "aiogram",
    "aiohttp",
    "granian[reload]",
    "uvloop",
    "sqlalchemy",
    "pydantic-settings>=2.11.0",
    "asyncpg>=0.30.0",
    "jinja2>=3.1.6",
    "yookassa>=3.8.0",
    "redis[hiredis]>=7.0.1",
]
